# Nyx

./: CMakeLists.txt  LICENSE  README.md
examples/: PNG.nyx  proto.nyx
inc/: nyx.h
inc/nyx/: filesystem.h  plan.h  plugin.h  registry.h
inc/nyx/syntax/: abstract.h  concrete.h  parser.h  token.h  tokenizer.h
res/: nyx.crc.nyx  nyx.nyx  nyx.text.nyx  nyxlang-c++.lua
res/binaries/: another.proto  simple.proto
res/c++/: Makefile  driver.cpp
res/c++/nyx/: crc.cpp  crc.h  runtime.cpp  runtime.h
res/nyx/: crc.cpp  crc.h
src/: filesystem.cpp  nyx.cpp  plan.cpp  plugin.cpp  registry.cpp
src/syntax/: abstract.cpp  concrete.cpp  parser.cpp  token.cpp  tokenizer.cpp
